# Save-Architect

./: README.md  pyproject.toml
src/savearchitect/: __init__.py  analysis.py  archive.py  cli.py  detection.py
